Assets/akanevrc/TeuchiUdon/Tests/src/Controls/Return3.teuchi
// error
f = () -> {
  if true then { return "ng"; };
  100
};
UnityEngine.Debug.Log(f());
